# FinControl

./: README.md  docker-compose.yml
backend/: .gitignore  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: edaf1dd2b120_create_users_table.py
backend/app/: main.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py
backend/app/modules/users/: models.py  router.py  schemas.py
